# DevLab

./: .gitignore  LICENSE  pyproject.toml
HotelAPI/: app.py  hotel.db  pyproject.toml  test_booking.py
HotelAPI/hotel/db/: db_interface.py  engine.py  models.py
HotelAPI/hotel/operations/: bookings.py  customer.py  customers.py  interface.py  rooms.py
HotelAPI/hotel/routers/: bookings.py  customers.py  rooms.py
build_effective_agents_with_langgraph/: llm.py  parallelized_workflow.py  prompt_chaining.py  prompt_chaining_workflow.py  pyproject.toml  router_workflow.py  workflow.py
crew_ai_examples/: L2_research_write_article.ipynb  L2_research_write_article.py  L3_customer_support.ipynb  L3_customer_support.py  L4_tools_customer_outreach.ipynb  L4_tools_customer_outreach.py  L5_tasks_event_planning.ipynb  L5_tasks_event_planning.py  L6_collaboration_financial_analysis.ipynb  L6_collaboration_financial_analysis.py  pyproject.toml
multi_agent_RAG/: ma_rag.ipynb
writing_crew/: agents.py  pyproject.toml
