[tool.poetry]
name = "crew-ai-examples"
version = "0.1.0"
description = ""
authors = ["Pano <panosevag@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.1,<3.13"
crewai = "0.28.8"
crewai-tools = "0.1.6"
langchain-community = "0.0.29"
charset-normalizer = "^3.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
