[tool.poetry]
name = "yes"
version = "0.1.0"
description = ""
authors = ["PanoEvJ <panosevag@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
langgraph = "^0.0.62"
langchain = "^0.2.2"
langchain-openai = "^0.1.8"
langchain-experimental = "^0.0.60"
qdrant-client = "^1.9.1"
pymupdf = "^1.24.5"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
